// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`settings page DOM renders the general category byte-stably 1`] = `
"<main aria-labelledby="settings-page-title" class="settings-window">
  <div class="settings-drag-region">
    <div class="settings-toolbar">
      <div class="settings-history-nav">
        <button type="button" title="Back" class="icon-button icon-button-chrome rail-toggle" aria-label="Back" disabled>
          <svg aria-hidden="true" class="lucide lucide-chevron-left" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.7" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="16" width="16" xmlns="http://www.w3.org/2000/svg">
            <path d="m15 18-6-6 6-6" />
          </svg>
        </button>
        <span aria-hidden="true" class="settings-history-divider">
        </span>
        <button type="button" title="Forward" class="icon-button icon-button-chrome rail-toggle" aria-label="Forward" disabled>
          <svg aria-hidden="true" class="lucide lucide-chevron-right" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.7" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="16" width="16" xmlns="http://www.w3.org/2000/svg">
            <path d="m9 18 6-6-6-6" />
          </svg>
        </button>
      </div>
      <h1 id="settings-page-title" class="settings-toolbar-title">General</h1>
    </div>
  </div>
  <div class="settings-layout">
    <aside class="settings-rail">
      <h2 class="settings-rail-title">Settings</h2>
      <nav aria-label="Settings categories" class="settings-nav">
        <button type="button" class="settings-nav-item is-active" aria-current="page">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg aria-hidden="true" class="lucide lucide-settings" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.75" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
              <path d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915" />
              <circle r="3" cy="12" cx="12" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">General</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg aria-hidden="true" class="lucide lucide-database" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.75" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
              <ellipse ry="3" rx="9" cy="5" cx="12" />
              <path d="M3 5V19A9 3 0 0 0 21 19V5" />
              <path d="M3 12A9 3 0 0 0 21 12" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Providers</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg aria-hidden="true" class="lucide lucide-key-round" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.75" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
              <path d="M2.586 17.414A2 2 0 0 0 2 18.828V21a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h1a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h.172a2 2 0 0 0 1.414-.586l.814-.814a6.5 6.5 0 1 0-4-4z" />
              <circle fill="currentColor" r=".5" cy="7.5" cx="16.5" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Security</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg aria-hidden="true" class="lucide lucide-graduation-cap" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.75" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
              <path d="M21.42 10.922a1 1 0 0 0-.019-1.838L12.83 5.18a2 2 0 0 0-1.66 0L2.6 9.08a1 1 0 0 0 0 1.832l8.57 3.908a2 2 0 0 0 1.66 0z" />
              <path d="M22 10v6" />
              <path d="M6 12.5V16a6 3 0 0 0 12 0v-3.5" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Skills</span>
          </span>
        </button>
      </nav>
    </aside>
    <div class="settings-content">
      <section aria-label="General" class="agent-settings-section settings-general-section">
        <div class="inset-group">
          <div class="inset-group-header">Appearance</div>
          <div role="list" class="inset-card" aria-label="Appearance">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Theme</span>
                  <span class="inset-row-sublabel">Match the system appearance, or always use light or dark.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <div role="radiogroup" class="segmented-control" aria-label="Theme">
                  <button type="button" tabindex="0" role="radio" class="segmented-control-option is-selected" aria-checked="true">System</button>
                  <button type="button" tabindex="-1" role="radio" class="segmented-control-option" aria-checked="false">Light</button>
                  <button type="button" tabindex="-1" role="radio" class="segmented-control-option" aria-checked="false">Dark</button>
                </div>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Language</span>
                  <span class="inset-row-sublabel">Choose the display language for menus and the interface.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <span class="select-popup">
                  <select class="select-popup-input" aria-label="Language">
                    <option selected value="en">English</option>
                    <option value="zh-Hans">简体中文</option>
                  </select>
                  <svg aria-hidden="true" class="lucide lucide-chevron-down select-popup-chevron" stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="12" width="12" xmlns="http://www.w3.org/2000/svg">
                    <path d="m6 9 6 6 6-6" />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div class="inset-group">
          <div class="inset-group-header">Notifications</div>
          <div role="list" class="inset-card" aria-label="Notifications">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">System notifications</span>
                  <span class="inset-row-sublabel">Show a system notification when a background Turn finishes or needs input while the app is in the background. Off by default.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" role="switch" aria-label="System notifications" aria-checked="false">
                  <span aria-hidden="true" class="switch-mark">
                    <span class="switch-mark-thumb">
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div class="inset-group">
          <div class="inset-group-header">Memory</div>
          <div role="list" class="inset-card" aria-label="Memory">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Use Memory</span>
                  <span class="inset-row-sublabel">Use and update durable Memory stored as editable Nodes in Daily Notes.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" role="switch" aria-label="Use Memory" aria-checked="false">
                  <span aria-hidden="true" class="switch-mark">
                    <span class="switch-mark-thumb">
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Timeline Memory</span>
                  <span class="inset-row-sublabel">Ready. New durable Memory is extracted after eligible Threads become idle.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" class="button button-secondary button-md">Open Memory</button>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Reset Memory</span>
                  <span class="inset-row-sublabel">Permanently delete canonical Memory containers and every descendant inside them. Notes outside those containers and stray tagged Nodes are preserved.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" class="button button-danger button-md">Reset Memory</button>
              </div>
            </div>
          </div>
        </div>
        <div class="inset-group">
          <div class="inset-group-header">Websites</div>
          <div role="list" class="inset-card" aria-label="Websites">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Website data</span>
                  <span class="inset-row-sublabel">Cookies, cache, and site storage used by URL Preview.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" class="button button-secondary button-md">Clear…</button>
              </div>
            </div>
          </div>
        </div>
        <div class="inset-group">
          <div class="inset-group-header">Translation Data</div>
          <div role="list" class="inset-card" aria-label="Translation Data">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Saved translations</span>
                  <span class="inset-row-sublabel">Translations saved locally for webpages, captions, and EPUB books.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" class="button button-secondary button-md">Clear…</button>
              </div>
            </div>
          </div>
        </div>
        <div class="inset-group">
          <div class="inset-group-header">Diagnostics</div>
          <div role="list" class="inset-card" aria-label="Diagnostics">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Diagnostics log</span>
                  <span class="inset-row-sublabel">Reveal the local structured error log in Finder.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" class="button button-secondary button-md">Reveal</button>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Diagnostics export</span>
                  <span class="inset-row-sublabel">Save recent diagnostics and minimal environment details as JSON.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" class="button button-secondary button-md">Export…</button>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</main>"
`;

exports[`settings page DOM renders the providers category byte-stably 1`] = `
"<main aria-labelledby="settings-page-title" class="settings-window">
  <div class="settings-drag-region">
    <div class="settings-toolbar">
      <div class="settings-history-nav">
        <button type="button" title="Back" class="icon-button icon-button-chrome rail-toggle" aria-label="Back" disabled>
          <svg aria-hidden="true" class="lucide lucide-chevron-left" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.7" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="16" width="16" xmlns="http://www.w3.org/2000/svg">
            <path d="m15 18-6-6 6-6" />
          </svg>
        </button>
        <span aria-hidden="true" class="settings-history-divider">
        </span>
        <button type="button" title="Forward" class="icon-button icon-button-chrome rail-toggle" aria-label="Forward" disabled>
          <svg aria-hidden="true" class="lucide lucide-chevron-right" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.7" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="16" width="16" xmlns="http://www.w3.org/2000/svg">
            <path d="m9 18 6-6-6-6" />
          </svg>
        </button>
      </div>
      <h1 id="settings-page-title" class="settings-toolbar-title">Providers</h1>
    </div>
  </div>
  <div class="settings-layout">
    <aside class="settings-rail">
      <h2 class="settings-rail-title">Settings</h2>
      <nav aria-label="Settings categories" class="settings-nav">
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg aria-hidden="true" class="lucide lucide-settings" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.75" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
              <path d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915" />
              <circle r="3" cy="12" cx="12" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">General</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item is-active" aria-current="page">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg aria-hidden="true" class="lucide lucide-database" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.75" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
              <ellipse ry="3" rx="9" cy="5" cx="12" />
              <path d="M3 5V19A9 3 0 0 0 21 19V5" />
              <path d="M3 12A9 3 0 0 0 21 12" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Providers</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg aria-hidden="true" class="lucide lucide-key-round" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.75" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
              <path d="M2.586 17.414A2 2 0 0 0 2 18.828V21a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h1a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h.172a2 2 0 0 0 1.414-.586l.814-.814a6.5 6.5 0 1 0-4-4z" />
              <circle fill="currentColor" r=".5" cy="7.5" cx="16.5" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Security</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg aria-hidden="true" class="lucide lucide-graduation-cap" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.75" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
              <path d="M21.42 10.922a1 1 0 0 0-.019-1.838L12.83 5.18a2 2 0 0 0-1.66 0L2.6 9.08a1 1 0 0 0 0 1.832l8.57 3.908a2 2 0 0 0 1.66 0z" />
              <path d="M22 10v6" />
              <path d="M6 12.5V16a6 3 0 0 0 12 0v-3.5" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Skills</span>
          </span>
        </button>
      </nav>
    </aside>
    <div class="settings-content">
      <section aria-label="Providers" class="agent-settings-section settings-providers-section">
        <div class="settings-provider-groups">
          <div class="inset-group">
            <div class="inset-group-header">Image generation</div>
            <div role="list" class="inset-card" aria-label="Image generation settings">
              <div role="listitem" class="inset-row">
                <div class="inset-row-main is-static">
                  <span class="inset-row-text is-wrap">
                    <span class="inset-row-label">Default model</span>
                    <span class="inset-row-sublabel">Used when generate_image does not name a model.</span>
                  </span>
                </div>
                <div class="inset-row-trailing">
                  <span class="select-popup settings-image-model-select">
                    <select class="select-popup-input" aria-label="Default model">
                      <option selected value="">Auto</option>
                    </select>
                    <svg aria-hidden="true" class="lucide lucide-chevron-down select-popup-chevron" stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="12" width="12" xmlns="http://www.w3.org/2000/svg">
                      <path d="m6 9 6 6 6-6" />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div class="inset-group">
            <div class="inset-group-header">Configured</div>
            <div role="list" class="inset-card" aria-label="Configured providers">
              <div role="listitem" class="inset-row">
                <button type="button" class="inset-row-main" aria-label="Anthropic, Needs key">
                  <span class="inset-row-leading">
                    <span aria-hidden="true" class="settings-provider-avatar has-logo">
                      <span class="settings-provider-logo">
                        <svg data-fixture-logo="anthropic" />
                      </span>
                    </span>
                  </span>
                  <span class="inset-row-text">
                    <span class="inset-row-label">Anthropic</span>
                  </span>
                </button>
                <div class="inset-row-trailing">
                  <div class="settings-provider-row-actions">
                    <button type="button" role="switch" aria-label="Enable or disable Anthropic" aria-checked="true">
                      <span aria-hidden="true" class="switch-mark checked">
                        <span class="switch-mark-thumb">
                        </span>
                      </span>
                    </button>
                    <button type="button" class="settings-row-menu-trigger" aria-label="Anthropic actions" aria-haspopup="menu" aria-expanded="false">
                      <svg aria-hidden="true" class="lucide lucide-ellipsis" stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
                        <circle r="1" cy="12" cx="12" />
                        <circle r="1" cy="12" cx="19" />
                        <circle r="1" cy="12" cx="5" />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div role="listitem" class="inset-row is-disabled">
                <button type="button" class="inset-row-main" aria-label="OpenAI, Disabled">
                  <span class="inset-row-leading">
                    <span aria-hidden="true" class="settings-provider-avatar has-logo">
                      <span class="settings-provider-logo">
                        <svg data-fixture-logo="openai" />
                      </span>
                    </span>
                  </span>
                  <span class="inset-row-text">
                    <span class="inset-row-label">OpenAI</span>
                  </span>
                </button>
                <div class="inset-row-trailing">
                  <div class="settings-provider-row-actions">
                    <button type="button" role="switch" aria-label="Enable or disable OpenAI" aria-checked="false">
                      <span aria-hidden="true" class="switch-mark">
                        <span class="switch-mark-thumb">
                        </span>
                      </span>
                    </button>
                    <button type="button" class="settings-row-menu-trigger" aria-label="OpenAI actions" aria-haspopup="menu" aria-expanded="false">
                      <svg aria-hidden="true" class="lucide lucide-ellipsis" stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
                        <circle r="1" cy="12" cx="12" />
                        <circle r="1" cy="12" cx="19" />
                        <circle r="1" cy="12" cx="5" />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="inset-group">
            <div class="inset-group-header">Add Providers</div>
            <div role="list" class="inset-card" aria-label="Providers to add">
              <div role="listitem" class="inset-row">
                <button type="button" class="inset-row-main" aria-label="Add custom provider">
                  <span class="inset-row-leading">
                    <span aria-hidden="true" class="settings-provider-add-leading">
                      <svg aria-hidden="true" class="lucide lucide-plus" stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
                        <path d="M5 12h14" />
                        <path d="M12 5v14" />
                      </svg>
                    </span>
                  </span>
                  <span class="inset-row-text">
                    <span class="inset-row-label">Add custom provider</span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</main>"
`;

exports[`settings page DOM renders the security category byte-stably 1`] = `
"<main aria-labelledby="settings-page-title" class="settings-window">
  <div class="settings-drag-region">
    <div class="settings-toolbar">
      <div class="settings-history-nav">
        <button type="button" title="Back" class="icon-button icon-button-chrome rail-toggle" aria-label="Back" disabled>
          <svg aria-hidden="true" class="lucide lucide-chevron-left" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.7" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="16" width="16" xmlns="http://www.w3.org/2000/svg">
            <path d="m15 18-6-6 6-6" />
          </svg>
        </button>
        <span aria-hidden="true" class="settings-history-divider">
        </span>
        <button type="button" title="Forward" class="icon-button icon-button-chrome rail-toggle" aria-label="Forward" disabled>
          <svg aria-hidden="true" class="lucide lucide-chevron-right" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.7" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="16" width="16" xmlns="http://www.w3.org/2000/svg">
            <path d="m9 18 6-6-6-6" />
          </svg>
        </button>
      </div>
      <h1 id="settings-page-title" class="settings-toolbar-title">Security</h1>
    </div>
  </div>
  <div class="settings-layout">
    <aside class="settings-rail">
      <h2 class="settings-rail-title">Settings</h2>
      <nav aria-label="Settings categories" class="settings-nav">
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg aria-hidden="true" class="lucide lucide-settings" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.75" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
              <path d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915" />
              <circle r="3" cy="12" cx="12" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">General</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg aria-hidden="true" class="lucide lucide-database" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.75" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
              <ellipse ry="3" rx="9" cy="5" cx="12" />
              <path d="M3 5V19A9 3 0 0 0 21 19V5" />
              <path d="M3 12A9 3 0 0 0 21 12" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Providers</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item is-active" aria-current="page">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg aria-hidden="true" class="lucide lucide-key-round" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.75" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
              <path d="M2.586 17.414A2 2 0 0 0 2 18.828V21a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h1a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h.172a2 2 0 0 0 1.414-.586l.814-.814a6.5 6.5 0 1 0-4-4z" />
              <circle fill="currentColor" r=".5" cy="7.5" cx="16.5" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Security</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg aria-hidden="true" class="lucide lucide-graduation-cap" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.75" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
              <path d="M21.42 10.922a1 1 0 0 0-.019-1.838L12.83 5.18a2 2 0 0 0-1.66 0L2.6 9.08a1 1 0 0 0 0 1.832l8.57 3.908a2 2 0 0 0 1.66 0z" />
              <path d="M22 10v6" />
              <path d="M6 12.5V16a6 3 0 0 0 12 0v-3.5" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Skills</span>
          </span>
        </button>
      </nav>
    </aside>
    <div class="settings-content">
      <section aria-label="Security" class="agent-settings-section settings-security-section">
        <div class="inset-group">
          <div class="inset-group-header">Agent Access</div>
          <div role="list" class="inset-card" aria-label="Agent access">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Filesystem</span>
                  <span class="inset-row-sublabel">Processes and file tools can read and modify everything available to your macOS account.</span>
                </span>
              </div>
              <div class="inset-row-trailing">Full Access</div>
            </div>
          </div>
        </div>
        <div class="inset-group">
          <div class="inset-group-header">Your Blocks</div>
          <div role="list" class="inset-card" aria-label="Your blocks">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Block rule</span>
                  <span class="inset-row-sublabel">
                    <span class="inset-row-code">rm -rf /</span>
                  </span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" class="button button-ghost button-sm">Remove</button>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Block rule</span>
                  <span class="inset-row-sublabel">
                    <span class="inset-row-code">curl * | sh</span>
                  </span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" class="button button-ghost button-sm">Remove</button>
              </div>
            </div>
          </div>
        </div>
        <div class="inset-group">
          <div class="inset-group-header">System Boundary</div>
          <div role="list" class="inset-card" aria-label="System boundary">
            <div role="listitem" class="inset-row settings-system-boundary-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">macOS account</span>
                  <span class="inset-row-sublabel">The agent has the same filesystem access as Tenon, including Tenon data and stored provider credentials.</span>
                </span>
              </div>
            </div>
          </div>
          <p class="inset-group-footnote">Native TCC, administrator authorization, Keychain controls, and service sign-in still apply.</p>
        </div>
      </section>
    </div>
  </div>
</main>"
`;

exports[`settings page DOM renders the skills category byte-stably 1`] = `
"<main aria-labelledby="settings-page-title" class="settings-window">
  <div class="settings-drag-region">
    <div class="settings-toolbar">
      <div class="settings-history-nav">
        <button type="button" title="Back" class="icon-button icon-button-chrome rail-toggle" aria-label="Back" disabled>
          <svg aria-hidden="true" class="lucide lucide-chevron-left" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.7" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="16" width="16" xmlns="http://www.w3.org/2000/svg">
            <path d="m15 18-6-6 6-6" />
          </svg>
        </button>
        <span aria-hidden="true" class="settings-history-divider">
        </span>
        <button type="button" title="Forward" class="icon-button icon-button-chrome rail-toggle" aria-label="Forward" disabled>
          <svg aria-hidden="true" class="lucide lucide-chevron-right" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.7" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="16" width="16" xmlns="http://www.w3.org/2000/svg">
            <path d="m9 18 6-6-6-6" />
          </svg>
        </button>
      </div>
      <h1 id="settings-page-title" class="settings-toolbar-title">Skills</h1>
    </div>
  </div>
  <div class="settings-layout">
    <aside class="settings-rail">
      <h2 class="settings-rail-title">Settings</h2>
      <nav aria-label="Settings categories" class="settings-nav">
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg aria-hidden="true" class="lucide lucide-settings" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.75" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
              <path d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915" />
              <circle r="3" cy="12" cx="12" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">General</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg aria-hidden="true" class="lucide lucide-database" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.75" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
              <ellipse ry="3" rx="9" cy="5" cx="12" />
              <path d="M3 5V19A9 3 0 0 0 21 19V5" />
              <path d="M3 12A9 3 0 0 0 21 12" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Providers</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg aria-hidden="true" class="lucide lucide-key-round" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.75" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
              <path d="M2.586 17.414A2 2 0 0 0 2 18.828V21a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h1a1 1 0 0 0 1-1v-1a1 1 0 0 1 1-1h.172a2 2 0 0 0 1.414-.586l.814-.814a6.5 6.5 0 1 0-4-4z" />
              <circle fill="currentColor" r=".5" cy="7.5" cx="16.5" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Security</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item is-active" aria-current="page">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg aria-hidden="true" class="lucide lucide-graduation-cap" stroke-linejoin="round" stroke-linecap="round" stroke-width="1.75" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
              <path d="M21.42 10.922a1 1 0 0 0-.019-1.838L12.83 5.18a2 2 0 0 0-1.66 0L2.6 9.08a1 1 0 0 0 0 1.832l8.57 3.908a2 2 0 0 0 1.66 0z" />
              <path d="M22 10v6" />
              <path d="M6 12.5V16a6 3 0 0 0 12 0v-3.5" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Skills</span>
          </span>
        </button>
      </nav>
    </aside>
    <div class="settings-content">
      <section aria-label="Skills" class="agent-settings-section settings-skills-section">
        <div class="inset-group">
          <div class="inset-group-header">Linlab Catalog</div>
          <div role="list" class="inset-card" aria-label="Linlab recommended skills">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">pdf<span class="settings-chip">Recommended</span>
                </span>
                <span class="inset-row-sublabel">Create, inspect, extract, repair, render, OCR, redact, and verify PDF artifacts.</span>
              </span>
            </div>
            <div class="inset-row-trailing">
              <span class="settings-chip">Installed</span>
            </div>
          </div>
          <div role="listitem" class="inset-row">
            <div class="inset-row-main is-static">
              <span class="inset-row-text is-wrap">
                <span class="inset-row-label">spreadsheet<span class="settings-chip">Recommended</span>
              </span>
              <span class="inset-row-sublabel">Create, inspect, validate, and package spreadsheet workbooks.</span>
            </span>
          </div>
          <div class="inset-row-trailing">
            <button type="button" class="button button-secondary button-sm">
              <svg aria-hidden="true" class="lucide lucide-plus" stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
                <path d="M5 12h14" />
                <path d="M12 5v14" />
              </svg>
              <span>Install</span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div class="inset-group">
      <div class="inset-group-header">Install from GitHub</div>
      <div role="list" class="inset-card" aria-label="Install a public GitHub skill">
        <div role="listitem" class="inset-row">
          <div class="inset-row-main is-static">
            <span class="inset-row-text is-wrap">
              <span class="inset-row-label">Public repository or skill URL</span>
            </span>
          </div>
          <div class="inset-row-trailing">
            <div class="managed-skill-source-control">
              <input type="text" class="input-control input-bare input-md" aria-label="Public repository or skill URL" spellCheck="false" placeholder="https://github.com/owner/repository" maxLength="2048" autoCorrect="off" autoCapitalize="none">
                <button type="button" class="button button-secondary button-sm" disabled>
                  <svg aria-hidden="true" class="lucide lucide-plus" stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
                    <path d="M5 12h14" />
                    <path d="M12 5v14" />
                  </svg>
                  <span>Add</span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="inset-group">
        <div class="inset-group-header">Skills</div>
        <div role="list" class="inset-card" aria-label="Installed skills">
          <div role="listitem" class="inset-row">
            <div class="inset-row-main is-static">
              <span class="inset-row-text is-wrap">
                <span class="inset-row-label">/pdf<span class="settings-chip">managed</span>
                <span class="settings-chip">Recommended</span>
                <span class="settings-chip">Enabled</span>
              </span>
              <span class="inset-row-sublabel">Create, inspect, extract, repair, render, OCR, redact, and verify PDF artifacts.</span>
            </span>
          </div>
          <div class="inset-row-trailing">
            <button type="button" class="settings-row-menu-trigger" aria-label="pdf actions" aria-haspopup="menu" aria-expanded="false">
              <svg aria-hidden="true" class="lucide lucide-ellipsis" stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
                <circle r="1" cy="12" cx="12" />
                <circle r="1" cy="12" cx="19" />
                <circle r="1" cy="12" cx="5" />
              </svg>
            </button>
            <button type="button" role="switch" aria-label="Enable pdf" aria-checked="true">
              <span aria-hidden="true" class="switch-mark checked">
                <span class="switch-mark-thumb">
                </span>
              </span>
            </button>
          </div>
        </div>
        <div role="listitem" class="inset-row is-disabled">
          <div class="inset-row-main is-static">
            <span class="inset-row-text is-wrap">
              <span class="inset-row-label">/project-lint<span class="settings-chip">project</span>
              <span class="settings-chip">Workspace · not accepted</span>
            </span>
            <span class="inset-row-sublabel">Fixture skill project-lint.</span>
          </span>
        </div>
        <div class="inset-row-trailing">
          <button type="button" class="button button-secondary button-sm settings-skill-accept" aria-label="Accept project-lint for automatic use">Accept</button>
          <button type="button" role="switch" aria-label="Toggle project-lint" aria-checked="false">
            <span aria-hidden="true" class="switch-mark">
              <span class="switch-mark-thumb">
              </span>
            </span>
          </button>
        </div>
      </div>
      <div role="listitem" class="inset-row">
        <div class="inset-row-main is-static">
          <span class="inset-row-text is-wrap">
            <span class="inset-row-label">/project-unratified<span class="settings-chip">project</span>
            <span class="settings-chip">Workspace · not accepted</span>
          </span>
          <span class="inset-row-sublabel">Fixture skill project-unratified.</span>
        </span>
      </div>
      <div class="inset-row-trailing">
        <button type="button" class="button button-secondary button-sm settings-skill-accept" aria-label="Accept project-unratified for automatic use">Accept</button>
        <button type="button" class="settings-row-menu-trigger" aria-label="project-unratified actions" aria-haspopup="menu" aria-expanded="false">
          <svg aria-hidden="true" class="lucide lucide-ellipsis" stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
            <circle r="1" cy="12" cx="12" />
            <circle r="1" cy="12" cx="19" />
            <circle r="1" cy="12" cx="5" />
          </svg>
        </button>
        <button type="button" role="switch" aria-label="Toggle project-unratified" aria-checked="true">
          <span aria-hidden="true" class="switch-mark checked">
            <span class="switch-mark-thumb">
            </span>
          </span>
        </button>
      </div>
    </div>
    <div role="listitem" class="inset-row">
      <div class="inset-row-main is-static">
        <span class="inset-row-text is-wrap">
          <span class="inset-row-label">/skillify<span class="settings-chip">built-in</span>
        </span>
        <span class="inset-row-sublabel">Fixture skill skillify.</span>
      </span>
    </div>
    <div class="inset-row-trailing">
      <button type="button" role="switch" aria-label="Toggle skillify" aria-checked="true">
        <span aria-hidden="true" class="switch-mark checked">
          <span class="switch-mark-thumb">
          </span>
        </span>
      </button>
    </div>
  </div>
  <div role="listitem" class="inset-row">
    <div class="inset-row-main is-static">
      <span class="inset-row-text is-wrap">
        <span class="inset-row-label">/user-notes<span class="settings-chip">user</span>
        <span class="settings-chip">Accepted</span>
      </span>
      <span class="inset-row-sublabel">Fixture skill user-notes.</span>
    </span>
  </div>
  <div class="inset-row-trailing">
    <button type="button" class="settings-row-menu-trigger" aria-label="user-notes actions" aria-haspopup="menu" aria-expanded="false">
      <svg aria-hidden="true" class="lucide lucide-ellipsis" stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="14" width="14" xmlns="http://www.w3.org/2000/svg">
        <circle r="1" cy="12" cx="12" />
        <circle r="1" cy="12" cx="19" />
        <circle r="1" cy="12" cx="5" />
      </svg>
    </button>
    <button type="button" role="switch" aria-label="Toggle user-notes" aria-checked="true">
      <span aria-hidden="true" class="switch-mark checked">
        <span class="switch-mark-thumb">
        </span>
      </span>
    </button>
  </div>
</div>
</div>
</div>
</section>
</div>
</div>
</main>"
`;
